# folio_data_import

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
src/folio_data_import/: MARCDataImport.py  UserImport.py  __main__.py  _progress.py
src/folio_data_import/marc_preprocessors/: _preprocessors.py
tests/: test__preprocessors.py  test_marc_data_import.py  test_user_import.py
