[tool.poetry]
name = "folio_data_import"
version = "0.1.0"
description = "A python module to interact with the Data Import system in the open-source FOLIO ILS"
authors = ["Brooks Travis <brooks.travis@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/folio_data_import"}]

[tool.poetry.scripts]
folio-data-import = "src.folio_data_import.__main__:sync_main"
folio-marc-import = "src.folio_data_import.MARCDataImport:sync_main"
folio-user-import = "src.folio_data_import.UserImport:sync_main"

[tool.poetry.dependencies]
python = "^3.10"
folioclient = "^0.60.5"
httpx = "^0.23.0"
pymarc = "^5.2.2"
pyhumps = "^3.8.0"
inquirer = "^3.4.0"
tqdm = "^4.66.5"
tabulate = "^0.9.0"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
